crates/aiy-protocol-config/src/snapshots/aiy_protocol_config__test__version_97.snap
---
source: crates/aiy-protocol-config/src/lib.rs
expression: "ProtocolConfig::get_for_version(cur, *chain_id)"
---
version: 97
feature_flags:
  package_upgrades: true
  commit_root_state_digest: true
  advance_epoch_start_time_in_safe_mode: true
  loaded_child_objects_fixed: true
  missing_type_is_compatibility_error: true
  scoring_decision_with_validity_cutoff: true
  consensus_order_end_of_epoch_last: true
  disallow_adding_abilities_on_upgrade: true
  disable_invariant_violation_check_in_swap_loc: true
  advance_to_highest_supported_protocol_version: true
  ban_entry_init: true
  package_digest_hash_module: true
  disallow_change_struct_type_params_on_upgrade: true
  no_extraneous_module_bytes: true
  narwhal_versioned_metadata: true
  zklogin_auth: true
  consensus_transaction_ordering: ByGasPrice
  simplified_unwrap_then_delete: true
  upgraded_multisig_supported: true
  txn_base_cost_as_multiplier: true
  shared_object_deletion: true
  narwhal_new_leader_election_schedule: true
  loaded_child_object_format: true
  enable_jwk_consensus_updates: true
  end_of_epoch_transaction_supported: true
  simple_conservation_checks: true
  loaded_child_object_format_type: true
  receive_objects: true
  consensus_checkpoint_signature_key_includes_digest: true
  random_beacon: true
  bridge: true
  enable_effects_v2: true
  narwhal_certificate_v2: true
  verify_legacy_zklogin_address: true
  recompute_has_public_transfer_in_execution: true
  accept_zklogin_in_multisig: true
  accept_passkey_in_multisig: true
  include_consensus_digest_in_prologue: true
  hardened_otw_check: true
  allow_receiving_object_id: true
  enable_poseidon: true
  enable_coin_deny_list: true
  enable_group_ops_native_functions: true
  enable_group_ops_native_function_msm: true
  enable_nitro_attestation: true
  enable_nitro_attestation_upgraded_parsing: true
  reject_mutable_random_on_entry_functions: true
  per_object_congestion_control_mode:
    ExecutionTimeEstimate:
      target_utilization: 50
      allowed_txn_cost_overage_burst_limit_us: 500000
      randomness_scalar: 20
      max_estimate_us: 1500000
      stored_observations_num_included_checkpoints: 10
      stored_observations_limit: 18
      stake_weighted_median_threshold: 3334
      default_none_duration_for_new_keys: true
  consensus_choice: Mysticeti
  consensus_network: Tonic
  correct_gas_payment_limit_check: true
  zklogin_max_epoch_upper_bound_delta: 30
  mysticeti_leader_scoring_and_schedule: true
  reshare_at_same_initial_version: true
  resolve_abort_locations_to_package_id: true
  mysticeti_use_committed_subdag_digest: true
  enable_vdf: true
  record_consensus_determined_version_assignments_in_prologue: true
  record_consensus_determined_version_assignments_in_prologue_v2: true
  fresh_vm_on_framework_upgrade: true
  prepend_prologue_tx_in_consensus_commit_in_checkpoints: true
  mysticeti_num_leaders_per_round: 1
  soft_bundle: true
  enable_coin_deny_list_v2: true
  passkey_auth: true
  authority_capabilities_v2: true
  rethrow_serialization_type_layout_errors: true
  consensus_distributed_vote_scoring_strategy: true
  consensus_round_prober: true
  validate_identifier_inputs: true
  disallow_self_identifier: true
  mysticeti_fastpath: true
  relocate_event_module: true
  uncompressed_g1_group_elements: true
  disallow_new_modules_in_deps_only_packages: true
  consensus_smart_ancestor_selection: true
  consensus_round_prober_probe_accepted_rounds: true
  native_charging_v2: true
  consensus_linearize_subdag_v2: true
  convert_type_argument_error: true
  variant_nodes: true
  consensus_zstd_compression: true
  minimize_child_object_mutations: true
  record_additional_state_digest_in_prologue: true
  move_native_context: true
  consensus_median_based_commit_timestamp: true
  normalize_ptb_arguments: true
  consensus_batched_block_sync: true
  enforce_checkpoint_timestamp_monotonicity: true
  max_ptb_value_size_v2: true
  resolve_type_input_ids_to_defining_id: true
  enable_party_transfer: true
  allow_unbounded_system_objects: true
  type_tags_in_object_runtime: true
  better_adapter_type_resolution_errors: true
  record_time_estimate_processed: true
  dependency_linkage_error: true
  additional_multisig_checks: true
  ignore_execution_time_observations_after_certs_closed: true
  debug_fatal_on_move_invariant_violation: true
  additional_consensus_digest_indirect_state: true
  check_for_init_during_upgrade: true
  include_checkpoint_artifacts_digest_in_summary: true
  use_mfp_txns_in_load_initial_object_debts: true
  cancel_for_failed_dkg_early: true
  enable_coin_registry: true
  additional_borrow_checks: true
max_tx_size_bytes: 131072
max_input_objects: 2048
max_size_written_objects: 5000000
max_size_written_objects_system_tx: 50000000
max_serialized_tx_effects_size_bytes: 524288
max_serialized_tx_effects_size_bytes_system_tx: 8388608
max_gas_payment_objects: 256
max_modules_in_publish: 64
max_package_dependencies: 32
max_arguments: 512
max_type_arguments: 16
max_type_argument_depth: 16
max_pure_argument_size: 16384
max_programmable_tx_commands: 1024
move_binary_format_version: 7
min_move_binary_format_version: 6
binary_module_handles: 100
binary_struct_handles: 300
binary_function_handles: 1500
binary_function_instantiations: 750
binary_signatures: 1000
binary_constant_pool: 4000
binary_identifiers: 10000
binary_address_identifiers: 100
binary_struct_defs: 200
binary_struct_def_instantiations: 100
binary_function_defs: 1000
binary_field_handles: 500
binary_field_instantiations: 250
binary_friend_decls: 100
max_move_object_size: 256000
max_move_package_size: 102400
max_publish_or_upgrade_per_ptb: 5
max_tx_gas: 50000000000000
max_gas_price: 50000000000
max_gas_price_rgp_factor_for_aborted_transactions: 100
max_gas_computation_bucket: 5000000
gas_rounding_step: 1000
max_loop_depth: 5
max_generic_instantiation_length: 32
max_function_parameters: 128
max_basic_blocks: 1024
max_value_stack_size: 1024
max_type_nodes: 256
max_push_size: 10000
max_struct_definitions: 200
max_function_definitions: 1000
max_fields_in_struct: 32
max_dependency_depth: 100
max_num_event_emit: 1024
max_num_new_move_object_ids: 2048
max_num_new_move_object_ids_system_tx: 32768
max_num_deleted_move_object_ids: 2048
max_num_deleted_move_object_ids_system_tx: 32768
max_num_transferred_move_object_ids: 2048
max_num_transferred_move_object_ids_system_tx: 32768
max_event_emit_size: 256000
max_event_emit_size_total: 65536000
max_move_vector_len: 262144
max_move_identifier_len: 128
max_move_value_depth: 128
max_move_enum_variants: 127
max_back_edges_per_function: 10000
max_back_edges_per_module: 10000
max_verifier_meter_ticks_per_function: 16000000
max_meter_ticks_per_module: 16000000
max_meter_ticks_per_package: 16000000
object_runtime_max_num_cached_objects: 1000
object_runtime_max_num_cached_objects_system_tx: 16000
object_runtime_max_num_store_entries: 1000
object_runtime_max_num_store_entries_system_tx: 16000
base_tx_cost_fixed: 1000
package_publish_cost_fixed: 1000
base_tx_cost_per_byte: 0
package_publish_cost_per_byte: 80
obj_access_cost_read_per_byte: 15
obj_access_cost_mutate_per_byte: 40
obj_access_cost_delete_per_byte: 40
obj_access_cost_verify_per_byte: 200
max_type_to_layout_nodes: 512
max_ptb_value_size: 1048576
gas_model_version: 10
obj_data_cost_refundable: 100
obj_metadata_cost_non_refundable: 50
storage_rebate_rate: 9900
storage_fund_reinvest_rate: 500
reward_slashing_rate: 10000
storage_gas_price: 76
max_transactions_per_checkpoint: 20000
max_checkpoint_size_bytes: 31457280
buffer_stake_for_protocol_upgrade_bps: 5000
address_from_bytes_cost_base: 52
address_to_u256_cost_base: 52
address_from_u256_cost_base: 52
config_read_setting_impl_cost_base: 100
config_read_setting_impl_cost_per_byte: 40
dynamic_field_hash_type_and_key_cost_base: 100
dynamic_field_hash_type_and_key_type_cost_per_byte: 2
dynamic_field_hash_type_and_key_value_cost_per_byte: 2
dynamic_field_hash_type_and_key_type_tag_cost_per_byte: 2
dynamic_field_add_child_object_cost_base: 100
dynamic_field_add_child_object_type_cost_per_byte: 10
dynamic_field_add_child_object_value_cost_per_byte: 10
dynamic_field_add_child_object_struct_tag_cost_per_byte: 10
dynamic_field_borrow_child_object_cost_base: 100
dynamic_field_borrow_child_object_child_ref_cost_per_byte: 10
dynamic_field_borrow_child_object_type_cost_per_byte: 10
dynamic_field_remove_child_object_cost_base: 100
dynamic_field_remove_child_object_child_cost_per_byte: 2
dynamic_field_remove_child_object_type_cost_per_byte: 2
dynamic_field_has_child_object_cost_base: 100
dynamic_field_has_child_object_with_ty_cost_base: 100
dynamic_field_has_child_object_with_ty_type_cost_per_byte: 2
dynamic_field_has_child_object_with_ty_type_tag_cost_per_byte: 2
event_emit_cost_base: 52
event_emit_value_size_derivation_cost_per_byte: 2
event_emit_tag_size_derivation_cost_per_byte: 5
event_emit_output_cost_per_byte: 10
object_borrow_uid_cost_base: 52
object_delete_impl_cost_base: 52
object_record_new_uid_cost_base: 52
transfer_transfer_internal_cost_base: 52
transfer_party_transfer_internal_cost_base: 52
transfer_freeze_object_cost_base: 52
transfer_share_object_cost_base: 52
transfer_receive_object_cost_base: 52
tx_context_derive_id_cost_base: 52
tx_context_fresh_id_cost_base: 52
tx_context_sender_cost_base: 30
tx_context_epoch_cost_base: 30
tx_context_epoch_timestamp_ms_cost_base: 30
tx_context_sponsor_cost_base: 30
tx_context_rgp_cost_base: 30
tx_context_gas_price_cost_base: 30
tx_context_gas_budget_cost_base: 30
tx_context_ids_created_cost_base: 30
tx_context_replace_cost_base: 30
types_is_one_time_witness_cost_base: 52
types_is_one_time_witness_type_tag_cost_per_byte: 2
types_is_one_time_witness_type_cost_per_byte: 2
validator_validate_metadata_cost_base: 20000
validator_validate_metadata_data_cost_per_byte: 2
crypto_invalid_arguments_cost: 100
bls12381_bls12381_min_sig_verify_cost_base: 44064
bls12381_bls12381_min_sig_verify_msg_cost_per_byte: 2
bls12381_bls12381_min_sig_verify_msg_cost_per_block: 2
bls12381_bls12381_min_pk_verify_cost_base: 49282
bls12381_bls12381_min_pk_verify_msg_cost_per_byte: 2
bls12381_bls12381_min_pk_verify_msg_cost_per_block: 2
ecdsa_k1_ecrecover_keccak256_cost_base: 500
ecdsa_k1_ecrecover_keccak256_msg_cost_per_byte: 2
ecdsa_k1_ecrecover_keccak256_msg_cost_per_block: 2
ecdsa_k1_ecrecover_sha256_cost_base: 500
ecdsa_k1_ecrecover_sha256_msg_cost_per_byte: 2
ecdsa_k1_ecrecover_sha256_msg_cost_per_block: 2
ecdsa_k1_decompress_pubkey_cost_base: 52
ecdsa_k1_secp256k1_verify_keccak256_cost_base: 1470
ecdsa_k1_secp256k1_verify_keccak256_msg_cost_per_byte: 2
ecdsa_k1_secp256k1_verify_keccak256_msg_cost_per_block: 2
ecdsa_k1_secp256k1_verify_sha256_cost_base: 1470
ecdsa_k1_secp256k1_verify_sha256_msg_cost_per_byte: 2
ecdsa_k1_secp256k1_verify_sha256_msg_cost_per_block: 2
ecdsa_r1_ecrecover_keccak256_cost_base: 1173
ecdsa_r1_ecrecover_keccak256_msg_cost_per_byte: 2
ecdsa_r1_ecrecover_keccak256_msg_cost_per_block: 2
ecdsa_r1_ecrecover_sha256_cost_base: 1173
ecdsa_r1_ecrecover_sha256_msg_cost_per_byte: 2
ecdsa_r1_ecrecover_sha256_msg_cost_per_block: 2
ecdsa_r1_secp256r1_verify_keccak256_cost_base: 4225
ecdsa_r1_secp256r1_verify_keccak256_msg_cost_per_byte: 2
ecdsa_r1_secp256r1_verify_keccak256_msg_cost_per_block: 2
ecdsa_r1_secp256r1_verify_sha256_cost_base: 4225
ecdsa_r1_secp256r1_verify_sha256_msg_cost_per_byte: 2
ecdsa_r1_secp256r1_verify_sha256_msg_cost_per_block: 2
ecvrf_ecvrf_verify_cost_base: 4848
ecvrf_ecvrf_verify_alpha_string_cost_per_byte: 2
ecvrf_ecvrf_verify_alpha_string_cost_per_block: 2
ed25519_ed25519_verify_cost_base: 1802
ed25519_ed25519_verify_msg_cost_per_byte: 2
ed25519_ed25519_verify_msg_cost_per_block: 2
groth16_prepare_verifying_key_bls12381_cost_base: 53838
groth16_prepare_verifying_key_bn254_cost_base: 82010
groth16_verify_groth16_proof_internal_bls12381_cost_base: 72090
groth16_verify_groth16_proof_internal_bls12381_cost_per_public_input: 8213
groth16_verify_groth16_proof_internal_bn254_cost_base: 115502
groth16_verify_groth16_proof_internal_bn254_cost_per_public_input: 9484
groth16_verify_groth16_proof_internal_public_input_cost_per_byte: 2
hash_blake2b256_cost_base: 10
hash_blake2b256_data_cost_per_byte: 2
hash_blake2b256_data_cost_per_block: 2
hash_keccak256_cost_base: 10
hash_keccak256_data_cost_per_byte: 2
hash_keccak256_data_cost_per_block: 2
poseidon_bn254_cost_base: 260
poseidon_bn254_cost_per_block: 388
group_ops_bls12381_decode_scalar_cost: 7
group_ops_bls12381_decode_g1_cost: 2848
group_ops_bls12381_decode_g2_cost: 3770
group_ops_bls12381_decode_gt_cost: 3068
group_ops_bls12381_scalar_add_cost: 10
group_ops_bls12381_g1_add_cost: 1556
group_ops_bls12381_g2_add_cost: 3048
group_ops_bls12381_gt_add_cost: 188
group_ops_bls12381_scalar_sub_cost: 10
group_ops_bls12381_g1_sub_cost: 1550
group_ops_bls12381_g2_sub_cost: 3019
group_ops_bls12381_gt_sub_cost: 497
group_ops_bls12381_scalar_mul_cost: 11
group_ops_bls12381_g1_mul_cost: 4842
group_ops_bls12381_g2_mul_cost: 9108
group_ops_bls12381_gt_mul_cost: 27490
group_ops_bls12381_scalar_div_cost: 91
group_ops_bls12381_g1_div_cost: 5091
group_ops_bls12381_g2_div_cost: 9206
group_ops_bls12381_gt_div_cost: 27804
group_ops_bls12381_g1_hash_to_base_cost: 2962
group_ops_bls12381_g2_hash_to_base_cost: 8688
group_ops_bls12381_g1_hash_to_cost_per_byte: 2
group_ops_bls12381_g2_hash_to_cost_per_byte: 2
group_ops_bls12381_g1_msm_base_cost: 62648
group_ops_bls12381_g2_msm_base_cost: 131192
group_ops_bls12381_g1_msm_base_cost_per_input: 1333
group_ops_bls12381_g2_msm_base_cost_per_input: 3216
group_ops_bls12381_msm_max_len: 32
group_ops_bls12381_pairing_cost: 26897
group_ops_bls12381_g1_to_uncompressed_g1_cost: 2099
group_ops_bls12381_uncompressed_g1_to_g1_cost: 677
group_ops_bls12381_uncompressed_g1_sum_base_cost: 77
group_ops_bls12381_uncompressed_g1_sum_cost_per_term: 26
group_ops_bls12381_uncompressed_g1_sum_max_terms: 1200
hmac_hmac_sha3_256_cost_base: 52
hmac_hmac_sha3_256_input_cost_per_byte: 2
hmac_hmac_sha3_256_input_cost_per_block: 2
check_zklogin_id_cost_base: 200
check_zklogin_issuer_cost_base: 200
vdf_verify_vdf_cost: 1500
vdf_hash_to_input_cost: 100
nitro_attestation_parse_base_cost: 2650
nitro_attestation_parse_cost_per_byte: 50
nitro_attestation_verify_base_cost: 2481600
nitro_attestation_verify_cost_per_cert: 2618450
bcs_per_byte_serialized_cost: 2
bcs_legacy_min_output_size_cost: 1
bcs_failure_cost: 52
hash_sha2_256_base_cost: 52
hash_sha2_256_per_byte_cost: 2
hash_sha2_256_legacy_min_input_len_cost: 1
hash_sha3_256_base_cost: 52
hash_sha3_256_per_byte_cost: 2
hash_sha3_256_legacy_min_input_len_cost: 1
type_name_get_base_cost: 52
type_name_get_per_byte_cost: 2
type_name_id_base_cost: 52
string_check_utf8_base_cost: 52
string_check_utf8_per_byte_cost: 2
string_is_char_boundary_base_cost: 52
string_sub_string_base_cost: 52
string_sub_string_per_byte_cost: 2
string_index_of_base_cost: 52
string_index_of_per_byte_pattern_cost: 2
string_index_of_per_byte_searched_cost: 2
vector_empty_base_cost: 52
vector_length_base_cost: 52
vector_push_back_base_cost: 52
vector_push_back_legacy_per_abstract_memory_unit_cost: 2
vector_borrow_base_cost: 52
vector_pop_back_base_cost: 52
vector_destroy_empty_base_cost: 52
vector_swap_base_cost: 52
debug_print_base_cost: 52
debug_print_stack_trace_base_cost: 52
execution_version: 3
consensus_bad_nodes_stake_threshold: 30
max_jwk_votes_per_validator_per_epoch: 240
max_age_of_jwk_in_epochs: 1
random_beacon_reduction_allowed_delta: 800
random_beacon_reduction_lower_bound: 500
random_beacon_dkg_timeout_round: 3000
random_beacon_min_round_interval_ms: 500
random_beacon_dkg_version: 1
consensus_max_transaction_size_bytes: 262144
consensus_max_transactions_in_block_bytes: 524288
consensus_max_num_transactions_in_block: 512
consensus_voting_rounds: 40
max_accumulated_txn_cost_per_object_in_narwhal_commit: 40
max_deferral_rounds_for_congestion_control: 10
max_txn_cost_overage_per_object_in_commit: 18446744073709551615
allowed_txn_cost_overage_burst_per_object_in_commit: 370000000
min_checkpoint_interval_ms: 200
checkpoint_summary_version_specific_data: 1
max_soft_bundle_size: 5
bridge_should_try_to_finalize_committee: true
max_accumulated_txn_cost_per_object_in_mysticeti_commit: 37000000
max_accumulated_randomness_txn_cost_per_object_in_mysticeti_commit: 7400000
consensus_gc_depth: 60
gas_budget_based_txn_cost_cap_factor: 400000
gas_budget_based_txn_cost_absolute_cap_commit_count: 50
sip_45_consensus_amplification_threshold: 5
use_object_per_epoch_marker_table_v2: true
consensus_commit_rate_estimation_window_size: 10
